--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
     "server-only": "^0.0.1",
+    "swr": "^2.1.5",
     "typescript": "5.0.4"
   },
   "devDependencies": {
