--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:Z$adrJu5_rgL*QM@db.ppfxnfdabrhiyqpuwape.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:Z$adrJu5_rgL*QM@db.ppfxnfdabrhiyqpuwape.supabase.co:5432/postgres"
+# DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.ppfxnfdabrhiyqpuwape.supabase.co:5432/postgres"
